--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,21 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jessemillar</groupId>
-  <artifactId>tagging</artifactId>
-  <version>v1.2.0</version>
-  <scm>
-    <developerConnection>
-    scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
-  </scm>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-      </plugin>
-    </plugins>
-  </build>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.jessemillar</groupId>
+    <artifactId>tagging</artifactId>
+    <version>1.2.0-SNAPSHOT</version>
+    <scm>
+        <developerConnection>scm:git:git@github.com:jessemillar/tagging.git</developerConnection>
+    </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
