--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jessemillar</groupId>
     <artifactId>tagging</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0-alpha</version>
     <scm>
         <developerConnection>scm:git:git@github.com:jessemillar/tagging.git</developerConnection>
-    </scm>
+      <tag>v1.2.0-alpha</tag>
+  </scm>
     <build>
         <plugins>
             <plugin>
