--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jessemillar</groupId>
     <artifactId>tagging</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <scm>
         <developerConnection>scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
-    <tag>v1.2.0-alpha</tag>
+    <tag>HEAD</tag>
   </scm>
     <build>
         <plugins>
