--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jessemillar</groupId>
     <artifactId>tagging</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.0-SNAPSHOT</version>
     <scm>
         <developerConnection>scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
   </scm>
