--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jessemillar</groupId>
     <artifactId>tagging</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
     <scm>
         <developerConnection>scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
+    <tag>tagging-1.3.0</tag>
   </scm>
     <build>
         <plugins>
