--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <version>2.5.3</version>
         <configuration>
           <tagNameFormat>v@{project.version}</tagNameFormat>
+					<versionPolicyManager implementation="org.apache.maven.shared.release.phase.OddEvenVersionPolicyManager"/>
         </configuration>
       </plugin>
     </plugins>
