--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jessemillar</groupId>
   <artifactId>tagging</artifactId>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.3.1</version>
   <scm>
     <developerConnection>
     scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.3.1</tag>
   </scm>
   <build>
     <plugins>
@@ -17,7 +17,7 @@
         <version>2.5.3</version>
         <configuration>
           <tagNameFormat>v@{project.version}</tagNameFormat>
-					<versionPolicyManager implementation="org.apache.maven.shared.release.phase.OddEvenVersionPolicyManager"/>
+					<versionPolicyManager implementation="org.apache.maven.shared.release.phase.OddEvenVersionPolicyManager" />
         </configuration>
       </plugin>
     </plugins>
