--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jessemillar</groupId>
   <artifactId>tagging</artifactId>
-  <version>1.3.1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <scm>
     <developerConnection>
     scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
-    <tag>v1.3.1</tag>
   </scm>
   <build>
     <plugins>
