--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jessemillar</groupId>
   <artifactId>tagging</artifactId>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
   <scm>
     <developerConnection>
     scm:git:https://github.com/jessemillar/tagging.git</developerConnection>
-    <tag>v2.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <build>
     <plugins>
